[package]
name = "weather-app"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.18"
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.15"
futures-signals = "0.3.20"
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = "0.3.51"
once_cell = "1.7.2"
serde_json = "1.0.64"
serde_derive = "1.0.126"
serde = "1.0.126"
serde-wasm-bindgen = "0.6.5"
reqwest = "0.12.5"

[dependencies.web-sys]
version = "0.3.51"
features = [
 "XmlHttpRequest",
 "console",
 "Request",
 "RequestInit", 
 "RequestMode", 
 "Response",
 "Url"
]
